# Simple-Concordance

./: .gitignore  CMakeLists.txt  README.md  concordance.cpp  concordance.h  gui_main.cpp  main.cpp  quran-simple.txt
